--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         'perspective-origin': '70% 55%',
         'position': 'fixed',
         'right': '-150px',
-        'top': '80px',
+        'top': '10%',
         'transition': 'transform 2s, perspective-origin 2s, perspective 2s, transform-origin 2s'
     });
     Keyframe.defineClass('p3d', {
