--- a/index.html
+++ b/index.html
@@ -57,19 +57,22 @@
             margin: auto;
             border: none;
         }
-        em {
-            color: #ffffff;
+        .wall em {
+            color: #fff;
             position: absolute;
             left: 130px;
             top: 130px;
             font-size: 40px;
         }
         #after {
-            background-color: black;
+            background-color: #000;
+            color: #fff;
+            font-size: 40px;
         }
         #after em {
             left: 60px;
             top: 80px;
+            position: absolute;
         }
         /* 3d转换中掉所有元素都应该为absolute布局，从所在空间点(0,0)点开始变换*/
         .space {
@@ -85,7 +88,7 @@
     <script>
         var table = {
             doc: [{
-                title: '1. 动画配置项',
+                title: '1. 动画配置项(作用于黑色元素为示例)',
                 module: [{
                     class: 'info',
                     list: [{
@@ -148,32 +151,60 @@
                     }]
                 }]
             }, {
-                title: '2. 基准配置项',
+                title: '2. 基准配置项（作用于3d场景为示例）',
                 module: [{
                     class: 'info',
                     list: [{
                         meta: '{"perspective":"250px"}'
                     }, {
                         meta: '{"perspective-origin":"30% 80%"}'
-                    }, {
-                        meta: '{"transform-style":"flat"}',
-                        notify: '对于嵌套的dom结构，父元素都需要设置preserve-3d,<br>在根元素设置只会影响直接子元素，且会影响到间接子元素'
-                    }, {
-                        meta: '{"transform-origin":"20% 50%"}'
+                    },{
+                        meta: '{"position":"absolute"}',
+                        notify: '3d转换中掉所有元素都应该为absolute布局，从所在空间(0,0)点开始变换,清除static定位产生的影响'
+                    },{
+                        meta: '{"transform-origin":"20% 50%"}',
+                        notify: '针对3d变换，支持x y z三个参数，z为远离用户眼睛视点的距离，默认值z＝0'
                     }]
                 }]
             },{
-                title: '3. 必要配置项',
+                title: '3. 常用配置项（作用于黑色元素为示例）',
                 module: [{
                     class: 'warning',
                     list: [{
                         meta: '{"backface-visibility":"hidden"}',
                         notify: 'visible || hidden'
-                    },{
-                        meta: '{"position":"absolute"}',
-                        notify: '3d转换中掉所有元素都应该为absolute布局，从所在空间点(0,0)点开始变换,清除static定位产生的影响'
+                    }, {
+                        meta: '{"transform-style":"flat"}',
+                        notify: '对于嵌套的dom结构，父元素都需要设置preserve-3d,<br>在根元素设置只会影响直接子元素，且会影响到间接子元素'
+                    }, {
+                        meta: '{"color":"red"}',
+                        notify: '颜色变换可以不使用16进制'
+                    }, {
+                        meta: '{"opacity":"0.3"}',
+                        notify: ''
+                    }, {
+                        meta: '{"background-color":"yellow"}',
+                        notify: ''
+                    }, {
+                        meta: '{"border-radius":"50%"}',
+                        notify: ''
                     }]
-                },]
+                }]
+            },{
+                title: '4. 不常用配置项（作用于条型背景为示例）',
+                module: [{
+                    class: 'success',
+                    list: [{
+                        meta: '{"background":"linear-gradient(#9b59be,#9b59b6) 0 50%,' +
+                        'linear-gradient(#3498db,#3498db) 0.625em 50%,' +
+                        'linear-gradient(#9b59b6, #9b59b6) 1.25em 50%,' +
+                        'linear-gradient(#9b59b6, #9b59b6) 1.875em 50%,' +
+                        'linear-gradient(#9b59b6,#9b59b6) 2.5em 50%", "background-repeat": "no-repeat",' +
+                        '"background-size":"0.5em 0.25em, 0.5em 2em, 0.5em 0.25em, 0.5em 0.25em, 0.5em 0.25em",' +
+                        '"rotateX":"-90deg"}',
+                        notify: ''
+                    }]
+                }]
             }]
         };
         var cpl = Compiler.instance();
@@ -196,7 +227,24 @@
                     $('.scene').attr('style', $(this).attr('data-css'));
                     break;
                 case table.doc[2].title:
-                    $('#after').attr('style', $('#after').attr('style') + $(this).attr('data-css'));
+                    var old = $('#after').attr('style');
+                    if (old) {
+                        var attach = $(this).attr('data-css');
+                        $('#after').attr('style',  old.replace(attach, '') + attach);
+                    }
+                    else {
+                        $('#after').attr('style',  $(this).attr('data-css'));
+                    }
+                    break;
+                case table.doc[3].title:
+                    var old = $('.ec-audioWave').attr('style');
+                    if (old) {
+                        var attach = $(this).attr('data-css');
+                        $('.ec-audioWave').attr('style',  old.replace(attach, '') + attach);
+                    }
+                    else {
+                        $('.ec-audioWave').attr('style',  $(this).attr('data-css'));
+                    }
                     break;
             }
         });
@@ -215,7 +263,7 @@
         'position': 'fixed',
         'right': '-150px',
         'top': '10%',
-        'transition': 'transform 2s, perspective-origin 2s, perspective 2s, transform-origin 2s'
+        'transition': 'all 2s'
     });
     Keyframe.defineClass('p3d', {
         'transform-style': 'preserve-3d',
@@ -267,9 +315,30 @@
         'height': '200px',
         'background-color': 'gray',
         'border': '1px solid black',
-        'transition': 'transform 2s',
+        'transition': 'all 2s',
         'backface-visibility': 'visible'
     });
+    Keyframe.defineClass('ec-audioWave', {
+        'transition': 'all 2s',
+        'background': 'linear-gradient(#9b59b6,#9b59b6) 0 50%,' +
+        'linear-gradient(#9b59b6,#9b59b6) 0.625em 50%,' +
+        'linear-gradient(#9b59b6, #9b59b6) 1.25em 50%,' +
+        'linear-gradient(#9b59b6, #9b59b6) 1.875em 50%,' +
+        'linear-gradient(#9b59b6,#9b59b6) 2.5em 50%',
+                'background-repeat': 'no-repeat',
+                'background-size': '0.5em 0.25em, ' +
+        '0.5em 0.25em, ' +
+        '0.5em 0.25em, ' +
+        '0.5em 0.25em, ' +
+        '0.5em 0.25em',
+        'width': '300px',
+        'height': '150px',
+        'line-height': '150px',
+        'left': '10%',
+        'top': '50%',
+        'font-size': '75px'
+    });
+
     Keyframe.compile();
 </script>
 <div class="scene">
@@ -283,7 +352,9 @@
         <div id="before" class="target space"></div>
         <div id="after" class="target space"><em>炫动</em></div>
     </div>
+    <div class="ec-audioWave space"></div>
 </div>
+
 </div>
 </body>
 </html>
