--- a/example/env.html
+++ b/example/env.html
@@ -111,7 +111,7 @@
 </div>
 <script>
 require.config({baseUrl: '../dist/amd'});
-require(['Event', 'Compiler', 'Compatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
+require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
     var compiler = Compiler.instance();
     var compatible = Compatible.instance();
     var group;
