--- a/example/env.html
+++ b/example/env.html
@@ -92,7 +92,7 @@
         }
     </style>
     <script src="../lib/require.js"></script>
-    <script src="../dist/amd/lib.js"></script>
+    <script src="../dist/amd/lib/Keyframe.js"></script>
 </head>
 <body>
 <div id="container">
