--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                     }, {
                         meta: {'border-radius':'50%'},
                         notify: ''
+                    }, {
+                        meta: {'border':'10px dotted blue'},
+                        notify: ''
                     }]
                 }]
             },{
@@ -357,6 +360,7 @@
         'background-color': 'gray',
         'border': '1px solid black',
         'transition': 'all 2s',
+        'background-clip': 'content-box',
         'backface-visibility': 'visible'
     });
     Keyframe.defineClass('ec-audioWave', {
