--- a/example/xuandong-full.html
+++ b/example/xuandong-full.html
@@ -5,7 +5,7 @@
     <title>炫动-pc</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
-    <script src="../dist/lib.min.js"></script>
+    <script src="../dist/lib/Keyframe.min.js"></script>
     <style>
         html, body {
             height: 100%;
