--- a/example/convert.html
+++ b/example/convert.html
@@ -87,7 +87,7 @@ compiler.compile();
 </div>
 
 <script src="../lib/require.js"></script>
-<script src="../src/lib.js"></script>
+<script src="../dist/lib/Keyframe.min.js"></script>
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/cssbeautify.js"></script>
 <script>
