--- a/example/keyframe.html
+++ b/example/keyframe.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="../src/lib.js"></script>
+    <script src="../dist/lib/Keyframe.min.js"></script>
     <script src="../lib/jquery.min.js"></script>
     <style>
         #demo {
