--- a/transform.html
+++ b/transform.html
@@ -21,15 +21,21 @@
             <tr>
                 <th>#</th>
                 <th>元数据</th>
+                <th>transition</th>
+                <th>css</th>
+                <th>status</th>
                 <th>说明</th>
             </tr>
             </thead>
             <tbody>
             {{#module}}
             {{#list}}
-            <tr class="{{class}}" data-title="{{title}}" data-fn="{{fn}}" data-p="{{meta}}" data-target="{{target}}">
+            <tr class="{{class}}" data-title="{{title}}" data-fn="{{fn}}" data-ijk='{{{ijk}}}' data-target="{{target}}">
                 <th scope="row">{{@index}}</th>
-                <td>{{meta}}</td>
+                <td>{{_meta}}</td>
+                <td>{{transition}}</td>
+                <td>{{css}}</td>
+                <td>{{status}}</td>
                 <td>{{{notify}}}</td>
             </tr>
             {{/list}}
@@ -40,9 +46,8 @@
     </script>
     <style>
         .api {
-            margin-left: 30px;
-            width: 950px;
-            min-width: 70%;
+            margin: auto;
+            width: 96%;
         }
         .api small {
             margin-left: 10px;
@@ -59,22 +64,37 @@
             margin: auto;
             border: none;
         }
+        .wall em {
+            color: #fff;
+            position: absolute;
+            left: 130px;
+            top: 130px;
+            font-size: 40px;
+        }
         #target {
-            width: 50px;
-            height: 50px;
-            position: fixed;
-            left: 50%;
-            top: 50%;
-            margin-top: -25px;
-            margin-left: -25px;
-            background: red;
-            border: 1px solid crimson;
+            font-size: 40px;
+            color: #ffffff;
+
+        }
+        #target em {
+            left: 60px;
+            top: 80px;
+            position: absolute;
+        }
+        /* 3d转换中掉所有元素都应该为absolute布局，从所在空间点(0,0)点开始变换*/
+        .space {
+            position: absolute;
+        }
+        h3 em {
+            font-size: 15px;
+            font-style: normal;
+            color: red;
         }
     </style>
 </head>
 <body>
 <div class="page-header">
-    <h1>Keyframes Animation API DOC<small style="margin-left: 20px;"><a target="_blank" href="example/doc.html" style="cursor: pointer;">write & compile in time</a></small></h1>
+    <h1>Transform Animation API DOC</h1>
 </div>
 <div class="api">
     <script>
@@ -85,15 +105,19 @@
                 module: [{
                     class: 'info',
                     list: [{
-                        meta: {'x':'50px'}
+                        meta: {'x':'50px', 'duration': '2s', 'function': 'ease-in', 'delay': '0.3s'},
+                        notify: 'duration function delay 配置可选'
                     }, {
-                        meta: {'y':'50px'}
+                        meta: {'y':'50px'},
+                        notify: 'duration默认1s'
                     }, {
-                        meta: {'z':'100px'}
+                        meta: {'z':'100px'},
+                        notify: 'function默认linear'
                     }, {
-                        meta: {'2d':'-50px, -50px'}
+                        meta: {'2d':'-50px, -50px'},
+                        notify: 'delay默认0s'
                     }, {
-                        meta: {'3d':'50px, 50px, -150px'}
+                        meta: {'3d':'50px, 50px, -100px'}
                     }]
                 }]
             }, {
@@ -102,17 +126,17 @@
                 module: [{
                     class: 'success',
                     list: [{
-                        meta: {'x':'120deg'}
+                        meta: {'x':'60deg'}
                     }, {
-                        meta: {'y':'120deg'}
+                        meta: {'y':'60deg'}
                     }, {
-                        meta: {'z':'120deg'},
+                        meta: {'z':'60deg'},
                         notify: 'rotateZ()函数让元素顺时针或逆时针旋转'
                     }, {
-                        meta: {'x':'120deg', 'y': '120deg'},
+                        meta: {'x':'60deg', 'y': '60deg'},
                         notify: '2d转换请使用x＋y组合'
                     }, {
-                        meta: {'3d':'1, 1, 1, 120deg'}
+                        meta: {'3d':'1, 1, 1, 60deg'}
                     }]
                 }]
             },{
@@ -126,7 +150,7 @@
                         meta: {'y':'30deg'}
                     }, {
                         meta: {'2d':'30deg, 60deg'},
-                        notify: 'skew存在兼容性问题，建议使用skewX＋skewY组合，<br>skew没有3d转换,目前无Z轴倾斜'
+                        notify: 'skew存在兼容性问题，建议使用skewX＋skewY组合，skew没有3d转换,目前无Z轴倾斜'
                     }]
                 }]
             },{
@@ -139,66 +163,241 @@
                     }, {
                         meta: {'y':'2'}
                     }, {
-                        meta: {'z':'200'},
+                        meta: {'z':'20'},
                         notify: '从z轴看去，scaleZ没有效果，从y轴看去scaleY没有效果'
                     }, {
-                        meta: {'2d':'2, 1.6'},
+                        meta: {'2d':'0.5, 0.5'},
                         notify: ''
                     }, {
-                        meta: {'3d':'1, 1, 2'},
+                        meta: {'3d':'1, 1, 0.05'},
                         notify: '需要配合其他变形才会有效果'
                     }]
                 }]
             },{
-                title: '5. moveTo',
+                title: '5. moveTo<em>(如果变换top，则top必须有初始值，不能为auto，否则触发不了变换；没有初始值的自动赋值为0，left right bottom类同)</em>',
                 fn: 'moveTo',
                 module: [{
                     class: 'active',
                     list: [{
-                        meta: {'t':'20px'}
+                        meta: {'t':'-70px'},
+                        notify: 't & b不可同时存在'
                     }, {
-                        meta: {'b':'20px'}
+                        meta: {'b':'20px'},
+                        notify: 'b & t不可同时存在'
                     }, {
-                        meta: {'l':'20px'},
-                        notify: '从z轴看去，scaleZ没有效果，从y轴看去scaleY没有效果'
+                        meta: {'l':'-80px'},
+                        notify: 'l & r不可同时存在'
                     }, {
                         meta: {'r':'20px'},
-                        notify: ''
+                        notify: 'r & l不可同时存在'
                     }, {
                         meta: {'t':'40px', 'l': '40px'},
-                        notify: '需要配合其他变形才会有效果'
+                        notify: '可使用组合变换'
+                    }, {
+                        meta: [{'t':'140px', 'function': 'ease-out'}, {'l': '160px', 'duration': '2s'}],
+                        notify: '非transform，可指定多个变换，不同的function delay duration'
+                    }]
+                }]
+            },{
+                title: '6. changeTo<em>(非transform属性变换，变换值不能等于初始值，否则触发不了变换)</em>',
+                fn: 'changeTo',
+                module: [{
+                    class: 'info',
+                    list: [{
+                        meta: {'h':'210px', 'w': '210px', 'c': 'green'},
+                        notify: '可进行组合变换'
+                    },{
+                        meta: [{'h':'220px', 'w': '220px'}, {'c': 'green', 'duration': '3s'}],
+                        notify: '可指定多组变换，指定不通的function delay duration'
+                    },{
+                        meta: {'c':'black'},
+                        notify: ''
+                    },{
+                        meta: {'bc':'cyan'},
+                        notify: ''
+                    },{
+                        meta: {'br':'50%'},
+                        notify: 'borderRadius变换会拆分成4个事件'
+                    },{
+                        meta: {'fs':'50px'},
+                        notify: ''
+                    },{
+                        meta: {'o':'0.5'},
+                        notify: ''
+                    },{
+                        meta: {'w':'250px'},
+                        notify: ''
+                    },{
+                        meta: {'h':'250px'},
+                        notify: ''
+                    },{
+                        meta: {'l':'50px'},
+                        notify: '同moveTo'
+                    },{
+                        meta: {'r':'50px'},
+                        notify: '同moveTo'
+                    },{
+                        meta: {'t':'50px'},
+                        notify: '同moveTo'
+                    },{
+                        meta: {'b':'50px'},
+                        notify: '同moveTo'
+                    }]
+                }]
+            },{
+                title: '7. mix<em>(混合以上所有变换，transform类型变换共享顶层function delay duration，非transform变换可独立指定，不指定的共享顶层配置)</em>',
+                fn: 'mix',
+                module: [{
+                    class: 'success',
+                    list: [{
+                        meta: {
+                            duration: '2s',
+                            moveTo: [{'t':'-70px', 'function': 'ease-out'}, {'l': '30px'}],
+                            scaleBy: {'2d': '1.3, 1.3'},
+                            moveBy: {z: '100px'},
+                            changeTo: [ {
+                                'c': 'yellow',
+                                'bc': 'red',
+                                'function': 'ease-in',
+                                'delay': '1s'
+                            }, {
+                                'fs': '45px'
+                            }]
+                        },
+                        notify: 't & b不可同时存在'
                     }]
                 }]
             }]
         };
-        require.config({baseUrl: 'src/amd'});
-        require(["Transform", "Event", "Util"], function (Transform, Event, Util) {
-            Util.each(table.doc, function(item) {
-                Util.each(item.module, function(item) {
-                    Util.each(item.list, function(item) {
+        require.config({baseUrl: 'dist/amd'});
+        require(["Transform", "Event", "Util", "Keyframe"], function (Transform, Event, Util, Keyframe) {
+            var _scale, _top;
+            if ($(window).height() > 700) {
+                _scale = '1.3, 1.3';
+                _top = '5%';
+            }
+            else {
+                _scale = '1, 1';
+                _top = '-100px';
+            }
+            Keyframe.defineClass('scene', {
+                'transform-style': 'preserve-3d',
+                'scale': _scale,
+                'perspective': '400px',
+                'width': '700px',
+                'height': '600px',
+                //'border': '1px dotted black',
+                'perspective-origin': '70% 55%',
+                'position': 'fixed',
+                'left': '60%',
+                'margin-left': '-350px',
+                'top': _top,
+                'transition': 'all 2s'
+            });
+            Keyframe.defineClass('p3d', {
+                'transform-style': 'preserve-3d',
+                'width': '500px',
+                'height': '500px',
+                'rotateX': '90deg',
+                'translateZ': '-300px',
+                'translateX': '100px'
+            });
+            Keyframe.defineClass('zuobiao', {
+                'width': '500px',
+                'height': '500px',
+                'transform-style': 'preserve-3d',
+                'backface-visibility': 'visible'
+            });
+            Keyframe.defineClass('wall', {
+                'width': '300px',
+                'height': '300px',
+                'opacity': 0.5,
+                'border': '1px solid black'
+            });
+            Keyframe.defineClass('y', {
+                'background-color': 'red',
+                'transform-origin': 'bottom',
+                'translateY': '-300px',
+                'translateZ': '300px',
+                'rotateX': '90deg'
+            });
+            Keyframe.defineClass('x', {
+                'background-color': 'green',
+                'transform-origin': 'right',
+                'translateX': '-300px',
+                'rotateY': '90deg'
+            });
+            Keyframe.defineClass('z90', {
+                'rotateZ': '90deg'
+            });
+            Keyframe.defineClass('x180', {
+                'rotateX': '180deg'
+            });
+            Keyframe.defineClass('z', {
+                'background-color': 'blue'
+            });
+            Keyframe.defineClass('target', {
+                'width': '200px',
+                'height': '200px',
+                'background-color': 'gray',
+                'border': '1px solid black',
+                'transition': 'all 2s',
+                'background-clip': 'content-box',
+                'backface-visibility': 'visible'
+            });
+            Keyframe.compile();
+            var fake = new Transform(document.getElementById('fake'));
+            var fn, mock;
+            Util.each(table.doc, function(item, i) {
+                fn = item.fn;
+                Util.each(item.module, function(item, j) {
+                    Util.each(item.list, function(item, k) {
                        // item.css = cpl._compileContent(item.meta);
-                        item.meta = JSON.stringify(item.meta, 4).replace(/[{}]/g, '');
+                        item._meta = JSON.stringify(item.meta, 4);
+                        mock = fake.mock(fn, item.meta);
+                        item.transition = mock[0];
+                        item.css = JSON.stringify(mock[1]).replace(/[{}]/g, '').replace(/,/g, ';');
+                        item.status = JSON.stringify(mock[2]);
+                        item.ijk = 'doc[' + i + '].module[' + j + '].list[' + k + ']';
                     });
                 });
             });
             $('.api').html(Mustache.render(document.getElementById('template').innerHTML, table));
-            var t = new Transform(document.getElementById('target'), true);
-            t.on(Event.next, function () {
-                console.log(arguments);
-            });
-            t.on(Event.over, function () {
-                console.log(arguments);
-            });
+            var t;
+            setTimeout(function () {
+                t = new Transform(document.getElementById('target'), true);
+                t.on(Event.next, function () {
+                    console.log(arguments);
+                });
+                t.on(Event.over, function () {
+                    console.log(arguments);
+                });
+                t.on(Event.css, function () {
+                    console.log(arguments);
+                });
+            }, 3000);
             $('.api').delegate('tr', 'click', function() {
-                var me = $(this);
-                var fn = me.attr('data-fn');
-                var p = me.attr('data-p');
-                t[fn](JSON.parse('{' + p + '}'));
+                if (t) {
+                    var me = $(this);
+                    var fn = me.attr('data-fn');
+                    var ijk = me.attr('data-ijk');
+                    var cf = eval('table.' + ijk);
+                    t[fn](cf.meta);
+                }
             });
         });
-
     </script>
 </div>
-<div id="target"></div>
+<div id="fake"></div>
+<div class="scene">
+    <div class="p3d space">
+        <div class="zuobiao space">
+            <div class="z wall space"><em>Z</em></div>
+            <div class="x wall space"><em class="z90">X</em></div>
+            <div class="y wall space"><em class="x180">Y</em></div>
+        </div>
+        <div id="target" class="target space"><em>transform</em></div>
+    </div>
+</div>
 </body>
 </html>
